--- a/GtkDateTimePicker/DateDialog.glade
+++ b/GtkDateTimePicker/DateDialog.glade
@@ -3,8 +3,7 @@
 <interface>
   <requires lib="gtk+" version="3.18"/>
   <object class="GtkAdjustment" id="HoursAdjustment">
-    <property name="lower">1</property>
-    <property name="upper">12</property>
+    <property name="upper">23</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
@@ -13,7 +12,7 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkDialog" id="MainDialog">
+  <object class="GtkDialog" id="DateDialog">
     <property name="can_focus">False</property>
     <property name="window_position">center</property>
     <property name="default_width">390</property>
