--- a/GtkDateTimePicker/DateDialog.glade
+++ b/GtkDateTimePicker/DateDialog.glade
@@ -122,6 +122,32 @@
                 <property name="y">63</property>
               </packing>
             </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="width_request">47</property>
+                <property name="height_request">31</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">時</property>
+              </object>
+              <packing>
+                <property name="x">254</property>
+                <property name="y">26</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="width_request">45</property>
+                <property name="height_request">25</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">分</property>
+              </object>
+              <packing>
+                <property name="x">325</property>
+                <property name="y">31</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="expand">True</property>
